--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build && rm -rf public && mkdir public && cp -r dist/wildlife-discovery/* public",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
